--- a/templates/userprofile/images.html.twig
+++ b/templates/userprofile/images.html.twig
@@ -6,12 +6,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mon Compte</title>
+  <title>Campa Holic</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{{ asset('/assets/img/icon.png') }}" rel="icon">
+ <link href="/assets/img/tent.jpg" rel="icon">
   <link href="assets/img/icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -51,7 +51,7 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="{{path('app_main')}}" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Acceuil</span></a></li>
-        <li><a href="{{ path('app_userprofile') }}" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Profile</span></a></li>
+        <li><a href="{{ path('app_userprofile', {'id': app.User.id}) }}" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Profile</span></a></li>
         
         <li><a href="{{ path('app_img') }}" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Gallerie</span></a></li>
         <li><a href="{{ path('app_demande') }}" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Demandes</span></a></li>
