--- a/public/assets/css/styleuser.css
+++ b/public/assets/css/styleuser.css
@@ -313,7 +313,7 @@ h6 {
 
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.25);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -326,7 +326,7 @@ h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #45505b;
+  color: #f4f6f7;
 }
 
 #hero p {
