--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,117 +1,75 @@
-<!doctype html>
-<html lang="en">
-  <head>
-  	<title>Login </title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Campa Holic</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		 <link href="/assets/img/tent.jpg" rel="icon">
+		
+		<!-- MATERIAL DESIGN ICONIC FONT -->
+		<link rel="stylesheet" href="/assets/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
 
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
-	<link rel="stylesheet" href="/assets/css/stylelog.css">
-
+		<!-- STYLE CSS -->
+		<link rel="stylesheet" href="/assets/css/login.css">
 	</head>
-	<header>
-	
-	<h1 class="logo">Camping</h1>
-    
-	</header>
-	<body class="img js-fullheight" >
-	<section class="ftco-section1">
-		<div class="container1">
-			
-			<div class="row justify-content-center">
-				<div class="col-md-6 col-lg-4">
-					<div class="login-wrap p-0">
-		      	<h3 class="mb-4 text-center">S'inscrire</h3>
-		      	
-    {{ form_start(registrationForm) }}
-				
-		      		<div class="form-group">
-		      			<!--<input type="text" class="form-control" placeholder="Username" required>!-->
-                        
-						{{ form_widget(registrationForm.username) }}
-		      		</div>
-	            <div class="form-group">
-	              <!--<input id="password-field" type="password" class="form-control" placeholder="Password" required>!-->
-				  {{ form_widget(registrationForm.userlastname) }}
-                 
-	              
-	            </div>
-                <div class="form-group">
-	              {{ form_widget(registrationForm.email) }}
-                 
-	              
-	            </div>
-                <div class="form-group">
-	              <!--<input id="password-field" type="password" class="form-control" placeholder="Password" required>!-->
-				{{ form_widget(registrationForm.adresse) }}
-                 
-	              
-	            </div>
-                <div class="form-group">
-	              <!--<input id="password-field" type="password" class="form-control" placeholder="Password" required>!-->
-				  {{ form_widget(registrationForm.numtel) }}
-                 
-	              
-	            </div>
-                <div class="form-group">
-	              <!--<input id="password-field" type="password" class="form-control" placeholder="Password" required>!-->
-				 {{ form_widget(registrationForm.plainPassword) }}
 
-                 
-	              
-	            </div>
-				<div class="form-group">
-	              <!--<input id="password-field" type="password" class="form-control" placeholder="Password" required>!-->
-				 {{ form_row(registrationForm.photo) }}
-                <div class="form-group">
-	              <!--<input id="password-field" type="password" class="form-control" placeholder="Password" required>!-->
-				  {{ form_row(registrationForm.agreeTerms) }}
-                 
-	              
-	            </div>
-	            <div class="form-group">
-	            	<button type="submit" class="form-control btn btn-primary submit px-3">S'inscrire</button>
-	            </div>
-	            <div class="form-group d-md-flex">
-	            	
-	           {{ form_end(registrationForm) }}
-	          
-		      </div>
+	<body>
+
+		<div class="wrapper" style="background:rgba(0,0,0,0.20)url('/assets/img/plan.jpg'); background-repeat: no-repeat;
+		overflow: hidden;
+		background-size: cover;
+		background-blend-mode: darken;">
+			<div class="inner">
+				<div class="image-holder">
+					<img src="/assets/img/lo.jpg" alt="">
 				</div>
+				{{ form_start(registrationForm) }}
+					<h3 style="color:#026b04;">S'inscrire</h3>
+					<div class="form-group">
+						{{ form_widget(registrationForm.username) }}
+						
+						{{ form_widget(registrationForm.userlastname) }}
+						
+					</div>
+					
+					<div class="form-wrapper">
+						{{ form_widget(registrationForm.email) }}
+						<i class="zmdi zmdi-email"></i>
+					</div>
+					<div class="form-wrapper">
+						{{ form_widget(registrationForm.adresse) }}
+						<i class="zmdi zmdi-pin"></i>
+					</div>
+					<div class="form-wrapper">
+						{{ form_widget(registrationForm.numtel) }}
+						<i class="zmdi zmdi-phone"></i>
+					</div>
+					
+					
+					<div class="form-wrapper">
+						{{ form_widget(registrationForm.plainPassword) }}
+						<i class="zmdi zmdi-lock"></i>
+					</div>
+					
+					<div class="form-wrapper">
+						{{ form_row(registrationForm.photo) }}
+						
+					</div>
+					<div class="form-wrapper">
+						{{ form_row(registrationForm.agreeTerms) }}
+						
+					</div>
+					<button type="submit" style="background-color:#026b04;">S'inscrire
+						<i class="zmdi zmdi-arrow-right"></i>
+					</button>
+					{{ form_end(registrationForm) }}
 			</div>
 		</div>
-	</section>
-
-	<script src="/aasets/js/jquery.min.js"></script>
+		<script src="/aasets/js/jquery.min.js"></script>
   <script src="/aasets/js/popper.js"></script>
   <script src="/aasets/js/bootstrap.min.js"></script>
   <script src="/aasets/js/main2.js"></script>
 
-	</body>
+		
+	</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
-
-
-{#
-{% block body %}
-<body class="body">
-    <h1>Inscription</h1>
-
-    {{ form_start(registrationForm) }}
-         {{ form_row(registrationForm.username) }}
-         {{ form_row(registrationForm.userlastname) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.adresse) }}
-        {{ form_row(registrationForm.numtel) }}
-        {{ form_row(registrationForm.plainPassword) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">S'inscrire</button>
-    {{ form_end(registrationForm) }}
-    </body>
-{% endblock %}
-
-
-#}
